# iRead

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.en.md  README.md  SECURITY.md  SUPPORT.md  compose.yaml  install  install-workbuddy.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
config/: accounts.json  batch.example.json  entities.bootstrap.json  external_sources.json  profile.json  reporting.json  source_policy.json  topics.json
docs/: README.md  agent-control-plane.md  agent-installation.md  cli-first-product.md  customization.md  disclosure.md  growth-strategy.md  local-testing.md  open-source-release.md  product-plan.md  release-readiness.md  report-editorial-framework.md  source-candidates.md  source-quality.md  ux-acceptance.md  ux-benchmark-beta6.md  wechat-authorization.md
launchd/: com.local.research-reporter.analysis.plist.template  com.local.research-reporter.archive.plist.template  com.local.research-reporter.awake.plist.template  com.local.research-reporter.backfill.plist.template  com.local.research-reporter.library.plist.template  com.local.research-reporter.log-rotation.plist.template  com.local.research-reporter.report.plist.template  com.local.research-reporter.sync.plist.template  com.local.research-reporter.werss-worker-2.plist.template  com.local.research-reporter.werss-worker-3.plist.template  com.local.research-reporter.werss.plist.template
patches/: we-mp-rss-existing-content-repair.patch  we-mp-rss-macos-qr.patch  we-mp-rss-malformed-publish-info.patch
prompts/: daily.md  enrich.md  monthly.md  propose.md  report_common.md  weekly.md
schemas/: acceptance.schema.json  agent_capabilities.schema.json  article_enrichment.schema.json  error_response.schema.json  feedback_list.schema.json  operation_events.schema.json  report.schema.json  research_proposal.schema.json  subscription_manifest.schema.json
scripts/: apply_werss_patches.sh  bootstrap_werss_native.sh  build_agent_skill_bundle.sh  doctor_summary.py  install.sh  install_agent_skill.sh  install_cron.sh  (+11 more)
(+65 files in other folders)
